CV and some files are added...

--- a/welcome1.html
+++ b/welcome1.html
@@ -16,7 +16,7 @@
 			</font>
 			
 			<font>
-					<a href="index.html" target="_blank" rel="nofollow"  title="Uploaded">
+					<a href="index.html" title="Uploaded">
 					<h1>Go Home Page.</h1></a>
 			</font>
 	</center>
